--- a/Chess.vcxproj.filters
+++ b/Chess.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="src\Chess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Piece.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Chess.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Piece.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
